Added footer listener and potentially fixed crashes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent">
 
     <com.allyants.boardview.BoardView
+        xmlns:boardview="http://schemas.android.com/apk/res-auto/com.allyants.boardview"
+        boardview:boardItemBackground="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/boardView"></com.allyants.boardview.BoardView>
+        android:id="@+id/boardView" />
 </RelativeLayout>
