--- a/boardview/src/main/res/layout/column_header.xml
+++ b/boardview/src/main/res/layout/column_header.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal">
+    android:background="@android:color/white">
 
         <TextView
             android:text="Hello World this is a test"
             android:layout_height="wrap_content"
-            android:background="@drawable/shadow_background"
             android:id="@+id/textView"
             android:textAlignment="center"
             android:maxWidth="240dp"
